chore: fix code smells